<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.elster.jupiter</groupId>
    <artifactId>parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

  <groupId>com.energyict.comserver</groupId>
  <artifactId>parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <inceptionYear>2013</inceptionYear>
  <packaging>pom</packaging>

  <organization>
    <name>Elster</name>
    <url>www.elster.com</url>
  </organization>

  <properties>
    <eiserver.version>${project.version}</eiserver.version>
    <protocols.version>9.0.0-SNAPSHOT</protocols.version>
    <buildtools.version>1.0.11</buildtools.version>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    <junit.version>4.11</junit.version>
    <comserver.mockito.version>1.9.0</comserver.mockito.version>
    <guice.version>3.0</guice.version>
    <aspectj.version>1.7.2</aspectj.version>
    <log4j.version>1.2.13</log4j.version>
    <fest-assertions.version>2.0M8</fest-assertions.version>
    <joda-time.version>2.1</joda-time.version>
    <serialio.version>10.0.4.2</serialio.version>
    <org.rxtx.version>2.2pre2</org.rxtx.version>
    <jetty-server.version>7.6.3.v20120416</jetty-server.version>
    <json.version>20090211</json.version>
    <jackson.version>1.9.2</jackson.version>
    <perf4j.version>0.9.16</perf4j.version>
  </properties>

  <scm>
    <developerConnection>scm:git:ssh://git@source.eict.vpdc/com/energyict/comserver/parent</developerConnection>
  </scm>

  <issueManagement>
    <system>Jira</system>
    <url>http://jira.eict.vpdc</url>
  </issueManagement>

  <ciManagement>
    <system>Bamboo</system>
    <url>http://build.eict.vpdc</url>
  </ciManagement>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.energyict</groupId>
        <artifactId>mdw</artifactId>
        <version>${eiserver.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>com.energyict</groupId>
        <artifactId>mdwswing</artifactId>
        <version>${eiserver.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- Dependency injection -->
      <dependency>
        <groupId>com.google.inject</groupId>
        <artifactId>guice</artifactId>
        <version>${guice.version}</version>
      </dependency>

      <!-- Logging -->
      <dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.0.0</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>org.javassist</groupId>
        <artifactId>javassist</artifactId>
        <version>3.16.1-GA</version>
      </dependency>

      <!-- Performance monitoring -->
      <dependency>
        <groupId>org.perf4j</groupId>
        <artifactId>perf4j</artifactId>
        <version>${perf4j.version}</version>
      </dependency>

      <!-- ComPort libraries -->
      <dependency>
        <groupId>org.rxtx</groupId>
        <artifactId>rxtx</artifactId>
        <version>${org.rxtx.version}</version>
      </dependency>

      <dependency>
        <groupId>serialio</groupId>
        <artifactId>serialio</artifactId>
        <version>${serialio.version}</version>
      </dependency>

      <!-- Remoting libraries -->
      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>${json.version}</version>
      </dependency>

      <!-- Web libraries -->
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-server</artifactId>
        <version>${jetty-server.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlet</artifactId>
        <version>${jetty-server.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-websocket</artifactId>
        <version>${jetty-server.version}</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.jackson</groupId>
        <artifactId>jackson-mapper-asl</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.jackson</groupId>
        <artifactId>jackson-xc</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>com.energyict</groupId>
        <artifactId>mdwdevtools</artifactId>
        <version>${eiserver.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.energyict</groupId>
        <artifactId>mdwimpl</artifactId>
        <version>${eiserver.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <version>${comserver.mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.easytesting</groupId>
        <artifactId>fest-assert-core</artifactId>
        <version>${fest-assertions.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>1.3.168</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>${joda-time.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12.4</version>
        <configuration>
          <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m -XX:-UseSplitVerifier</argLine>
          <systemProperties>
            <property>
              <name>dbUser</name>
              <value>${testDatabase.username}</value>
            </property>
            <property>
              <name>dbPassword</name>
              <value>${testDatabase.password}</value>
            </property>
            <property>
              <name>jdbcUrl</name>
              <value>${testDatabase.url}</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptors>
            <descriptor>assembly/assembly.xml</descriptor>
          </descriptors>
          <!-- Skip the tests for now, until they are truly fixed. -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <arguments>-DskipTests=true</arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>eict-releases</id>
      <name>EnergyICT releases repository</name>
      <url>http://source.eict.vpdc/nexus/content/repositories/releases/</url>
    </repository>

    <snapshotRepository>
      <id>eict-snapshots</id>
      <name>EnergyICT snapshots repository</name>
      <url>http://source.eict.vpdc/nexus/content/repositories/snapshots/</url>
      <uniqueVersion>false</uniqueVersion>
    </snapshotRepository>
  </distributionManagement>

  <!-- Repositories specification to find parent pom. Rest of repos comes from parent pom-->
  <repositories>

    <repository>
      <id>eict-public</id>
      <name>EnergyICT public releases repository</name>
      <url>http://source.eict.vpdc/nexus/content/repositories/releases/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>eict-third-party</id>
      <name>EnergyICT public releases repository</name>
      <url>http://source.eict.vpdc/nexus/content/repositories/thirdparty/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>maven-central</id>
      <url>http://repo1.maven.org/maven2/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>plugins</id>
      <url>http://source.eict.vpdc/nexus/content/repositories/plugins</url>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
    <pluginRepository>
      <id>maven2-repository.dev.java.net</id>
      <name>Java.net Repository for Maven 2</name>
      <url>http://download.java.net/maven/2/</url>
    </pluginRepository>
  </pluginRepositories>

</project>